components/creekbluemanage/sbc/src/sbc.h

typedef __int64    ssize_t;
typedef  int   ssize_t;
struct sbc_struct {
	unsigned long flags;

	uint8_t frequency;
	uint8_t blocks;
	uint8_t subbands;
	uint8_t mode;
	uint8_t allocation;
	uint8_t bitpool;
	uint8_t endian;

	void *priv;
	void *priv_alloc_base;
};
typedef struct sbc_struct sbc_t;
/**@brief 压缩比：6:1初始化
 *@param[in] sbc    创建sbc属性
 *@param[in] flag:

 *@retval 0     		 成功
 *@retval -EIO			 未创建sbc属性
*@retval -ENOMEM 		动态申请内存指针为空
*/
int sbc_six_one_init(sbc_t *sbc, unsigned long flags);
/**@brief 压缩比：8:1初始化
 *@param[in] sbc    创建sbc属性
 *@param[in] flag:

 *@retval 0     		 成功
 *@retval -EIO			 未创建sbc属性
*@retval -ENOMEM 		动态申请内存指针为空
*/
int sbc_eight_one_init(sbc_t *sbc, unsigned long flags);
int sbc_reinit(sbc_t *sbc, unsigned long flags);
int sbc_init_msbc(sbc_t *sbc, unsigned long flags);
int sbc_init_a2dp(sbc_t *sbc, unsigned long flags,
					const void *conf, size_t conf_len);
int sbc_reinit_a2dp(sbc_t *sbc, unsigned long flags,
					const void *conf, size_t conf_len);
ssize_t sbc_parse(sbc_t *sbc, const void *input, size_t input_len);
/* Decodes ONE input block into ONE output block */
ssize_t sbc_decode(sbc_t *sbc, const void *input, size_t input_len,
			void *output, size_t output_len, size_t *written);
/* Encodes ONE input block into ONE output block */
ssize_t sbc_encode(sbc_t *sbc, const void *input, size_t input_len,
			void *output, size_t output_len, ssize_t *written);