components/creekbluemanage/sbc/lib/sbc_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/sbc.h`.
///
/// Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
///
class SbcBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  SbcBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  SbcBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  late final ffi.Pointer<ffi.Pointer<ffi.Int16>> __sbc_proto_fixed4 =
      _lookup<ffi.Pointer<ffi.Int16>>('_sbc_proto_fixed4');

  ffi.Pointer<ffi.Int16> get _sbc_proto_fixed4 => __sbc_proto_fixed4.value;

  set _sbc_proto_fixed4(ffi.Pointer<ffi.Int16> value) =>
      __sbc_proto_fixed4.value = value;

  late final ffi.Pointer<ffi.Pointer<ffi.Int16>> _cos_table_fixed_4 =
      _lookup<ffi.Pointer<ffi.Int16>>('cos_table_fixed_4');

  ffi.Pointer<ffi.Int16> get cos_table_fixed_4 => _cos_table_fixed_4.value;

  set cos_table_fixed_4(ffi.Pointer<ffi.Int16> value) =>
      _cos_table_fixed_4.value = value;

  late final ffi.Pointer<ffi.Pointer<ffi.Int16>> __sbc_proto_fixed8 =
      _lookup<ffi.Pointer<ffi.Int16>>('_sbc_proto_fixed8');

  ffi.Pointer<ffi.Int16> get _sbc_proto_fixed8 => __sbc_proto_fixed8.value;

  set _sbc_proto_fixed8(ffi.Pointer<ffi.Int16> value) =>
      __sbc_proto_fixed8.value = value;

  late final ffi.Pointer<ffi.Pointer<ffi.Int16>> _cos_table_fixed_8 =
      _lookup<ffi.Pointer<ffi.Int16>>('cos_table_fixed_8');

  ffi.Pointer<ffi.Int16> get cos_table_fixed_8 => _cos_table_fixed_8.value;

  set cos_table_fixed_8(ffi.Pointer<ffi.Int16> value) =>
      _cos_table_fixed_8.value = value;

  /// Constant tables for the use in SIMD optimized analysis filters
  /// Each table consists of two parts:
  /// 1. reordered "proto" table
  /// 2. reordered "cos" table
  ///
  /// Due to non-symmetrical reordering, separate tables for "even"
  /// and "odd" cases are needed
  late final ffi.Pointer<ffi.Pointer<ffi.Int16>>
      _analysis_consts_fixed4_simd_even =
      _lookup<ffi.Pointer<ffi.Int16>>('analysis_consts_fixed4_simd_even');

  ffi.Pointer<ffi.Int16> get analysis_consts_fixed4_simd_even =>
      _analysis_consts_fixed4_simd_even.value;

  set analysis_consts_fixed4_simd_even(ffi.Pointer<ffi.Int16> value) =>
      _analysis_consts_fixed4_simd_even.value = value;

  late final ffi.Pointer<ffi.Pointer<ffi.Int16>>
      _analysis_consts_fixed4_simd_odd =
      _lookup<ffi.Pointer<ffi.Int16>>('analysis_consts_fixed4_simd_odd');

  ffi.Pointer<ffi.Int16> get analysis_consts_fixed4_simd_odd =>
      _analysis_consts_fixed4_simd_odd.value;

  set analysis_consts_fixed4_simd_odd(ffi.Pointer<ffi.Int16> value) =>
      _analysis_consts_fixed4_simd_odd.value = value;

  late final ffi.Pointer<ffi.Pointer<ffi.Int16>>
      _analysis_consts_fixed8_simd_even =
      _lookup<ffi.Pointer<ffi.Int16>>('analysis_consts_fixed8_simd_even');

  ffi.Pointer<ffi.Int16> get analysis_consts_fixed8_simd_even =>
      _analysis_consts_fixed8_simd_even.value;

  set analysis_consts_fixed8_simd_even(ffi.Pointer<ffi.Int16> value) =>
      _analysis_consts_fixed8_simd_even.value = value;

  late final ffi.Pointer<ffi.Pointer<ffi.Int16>>
      _analysis_consts_fixed8_simd_odd =
      _lookup<ffi.Pointer<ffi.Int16>>('analysis_consts_fixed8_simd_odd');

  ffi.Pointer<ffi.Int16> get analysis_consts_fixed8_simd_odd =>
      _analysis_consts_fixed8_simd_odd.value;

  set analysis_consts_fixed8_simd_odd(ffi.Pointer<ffi.Int16> value) =>
      _analysis_consts_fixed8_simd_odd.value = value;

  late final ffi.Pointer<ffi.Pointer<ffi.Int32>> _sbc_proto_4_40m0 =
      _lookup<ffi.Pointer<ffi.Int32>>('sbc_proto_4_40m0');

  ffi.Pointer<ffi.Int32> get sbc_proto_4_40m0 => _sbc_proto_4_40m0.value;

  set sbc_proto_4_40m0(ffi.Pointer<ffi.Int32> value) =>
      _sbc_proto_4_40m0.value = value;

  late final ffi.Pointer<ffi.Pointer<ffi.Int32>> _sbc_proto_4_40m1 =
      _lookup<ffi.Pointer<ffi.Int32>>('sbc_proto_4_40m1');

  ffi.Pointer<ffi.Int32> get sbc_proto_4_40m1 => _sbc_proto_4_40m1.value;

  set sbc_proto_4_40m1(ffi.Pointer<ffi.Int32> value) =>
      _sbc_proto_4_40m1.value = value;

  late final ffi.Pointer<ffi.Pointer<ffi.Int32>> _sbc_proto_8_80m0 =
      _lookup<ffi.Pointer<ffi.Int32>>('sbc_proto_8_80m0');

  ffi.Pointer<ffi.Int32> get sbc_proto_8_80m0 => _sbc_proto_8_80m0.value;

  set sbc_proto_8_80m0(ffi.Pointer<ffi.Int32> value) =>
      _sbc_proto_8_80m0.value = value;

  late final ffi.Pointer<ffi.Pointer<ffi.Int32>> _sbc_proto_8_80m1 =
      _lookup<ffi.Pointer<ffi.Int32>>('sbc_proto_8_80m1');

  ffi.Pointer<ffi.Int32> get sbc_proto_8_80m1 => _sbc_proto_8_80m1.value;

  set sbc_proto_8_80m1(ffi.Pointer<ffi.Int32> value) =>
      _sbc_proto_8_80m1.value = value;

  late final ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Int32>>> _synmatrix4 =
      _lookup<ffi.Pointer<ffi.Pointer<ffi.Int32>>>('synmatrix4');

  ffi.Pointer<ffi.Pointer<ffi.Int32>> get synmatrix4 => _synmatrix4.value;

  set synmatrix4(ffi.Pointer<ffi.Pointer<ffi.Int32>> value) =>
      _synmatrix4.value = value;

  late final ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Int32>>> _synmatrix8 =
      _lookup<ffi.Pointer<ffi.Pointer<ffi.Int32>>>('synmatrix8');

  ffi.Pointer<ffi.Pointer<ffi.Int32>> get synmatrix8 => _synmatrix8.value;

  set synmatrix8(ffi.Pointer<ffi.Pointer<ffi.Int32>> value) =>
      _synmatrix8.value = value;

  /// A2DP specification: Appendix B, page 69
  late final ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Int>>> _sbc_offset4 =
      _lookup<ffi.Pointer<ffi.Pointer<ffi.Int>>>('sbc_offset4');

  ffi.Pointer<ffi.Pointer<ffi.Int>> get sbc_offset4 => _sbc_offset4.value;

  set sbc_offset4(ffi.Pointer<ffi.Pointer<ffi.Int>> value) =>
      _sbc_offset4.value = value;

  /// A2DP specification: Appendix B, page 69
  late final ffi.Pointer<ffi.Pointer<ffi.Pointer<ffi.Int>>> _sbc_offset8 =
      _lookup<ffi.Pointer<ffi.Pointer<ffi.Int>>>('sbc_offset8');

  ffi.Pointer<ffi.Pointer<ffi.Int>> get sbc_offset8 => _sbc_offset8.value;

  set sbc_offset8(ffi.Pointer<ffi.Pointer<ffi.Int>> value) =>
      _sbc_offset8.value = value;

  /// @brief 压缩比：6:1初始化
  /// @param[in] sbc    创建sbc属性
  /// @param[in] flag:
  ///
  /// @retval 0     		 成功
  /// @retval -EIO			 未创建sbc属性
  /// @retval -ENOMEM 		动态申请内存指针为空
  int sbc_six_one_init(
    ffi.Pointer<sbc_t> sbc,
    int flags,
  ) {
    return _sbc_six_one_init(
      sbc,
      flags,
    );
  }

  late final _sbc_six_one_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<sbc_t>, ffi.UnsignedLong)>>('sbc_six_one_init');
  late final _sbc_six_one_init =
      _sbc_six_one_initPtr.asFunction<int Function(ffi.Pointer<sbc_t>, int)>();

  /// @brief 压缩比：8:1初始化
  /// @param[in] sbc    创建sbc属性
  /// @param[in] flag:
  ///
  /// @retval 0     		 成功
  /// @retval -EIO			 未创建sbc属性
  /// @retval -ENOMEM 		动态申请内存指针为空
  int sbc_eight_one_init(
    ffi.Pointer<sbc_t> sbc,
    int flags,
  ) {
    return _sbc_eight_one_init(
      sbc,
      flags,
    );
  }

  late final _sbc_eight_one_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<sbc_t>, ffi.UnsignedLong)>>('sbc_eight_one_init');
  late final _sbc_eight_one_init = _sbc_eight_one_initPtr
      .asFunction<int Function(ffi.Pointer<sbc_t>, int)>();

  int sbc_reinit(
    ffi.Pointer<sbc_t> sbc,
    int flags,
  ) {
    return _sbc_reinit(
      sbc,
      flags,
    );
  }

  late final _sbc_reinitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<sbc_t>, ffi.UnsignedLong)>>('sbc_reinit');
  late final _sbc_reinit =
      _sbc_reinitPtr.asFunction<int Function(ffi.Pointer<sbc_t>, int)>();

  int sbc_init_msbc(
    ffi.Pointer<sbc_t> sbc,
    int flags,
  ) {
    return _sbc_init_msbc(
      sbc,
      flags,
    );
  }

  late final _sbc_init_msbcPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<sbc_t>, ffi.UnsignedLong)>>('sbc_init_msbc');
  late final _sbc_init_msbc =
      _sbc_init_msbcPtr.asFunction<int Function(ffi.Pointer<sbc_t>, int)>();

  int sbc_init_a2dp(
    ffi.Pointer<sbc_t> sbc,
    int flags,
    ffi.Pointer<ffi.Void> conf,
    int conf_len,
  ) {
    return _sbc_init_a2dp(
      sbc,
      flags,
      conf,
      conf_len,
    );
  }

  late final _sbc_init_a2dpPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<sbc_t>, ffi.UnsignedLong,
              ffi.Pointer<ffi.Void>, ffi.Size)>>('sbc_init_a2dp');
  late final _sbc_init_a2dp = _sbc_init_a2dpPtr.asFunction<
      int Function(ffi.Pointer<sbc_t>, int, ffi.Pointer<ffi.Void>, int)>();

  int sbc_reinit_a2dp(
    ffi.Pointer<sbc_t> sbc,
    int flags,
    ffi.Pointer<ffi.Void> conf,
    int conf_len,
  ) {
    return _sbc_reinit_a2dp(
      sbc,
      flags,
      conf,
      conf_len,
    );
  }

  late final _sbc_reinit_a2dpPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<sbc_t>, ffi.UnsignedLong,
              ffi.Pointer<ffi.Void>, ffi.Size)>>('sbc_reinit_a2dp');
  late final _sbc_reinit_a2dp = _sbc_reinit_a2dpPtr.asFunction<
      int Function(ffi.Pointer<sbc_t>, int, ffi.Pointer<ffi.Void>, int)>();

  int sbc_parse(
    ffi.Pointer<sbc_t> sbc,
    ffi.Pointer<ffi.Void> input,
    int input_len,
  ) {
    return _sbc_parse(
      sbc,
      input,
      input_len,
    );
  }

  late final _sbc_parsePtr = _lookup<
      ffi.NativeFunction<
          ssize_t Function(ffi.Pointer<sbc_t>, ffi.Pointer<ffi.Void>,
              ffi.Size)>>('sbc_parse');
  late final _sbc_parse = _sbc_parsePtr.asFunction<
      int Function(ffi.Pointer<sbc_t>, ffi.Pointer<ffi.Void>, int)>();

  /// Decodes ONE input block into ONE output block
  int sbc_decode(
    ffi.Pointer<sbc_t> sbc,
    ffi.Pointer<ffi.Void> input,
    int input_len,
    ffi.Pointer<ffi.Void> output,
    int output_len,
    ffi.Pointer<ffi.Size> written,
  ) {
    return _sbc_decode(
      sbc,
      input,
      input_len,
      output,
      output_len,
      written,
    );
  }

  late final _sbc_decodePtr = _lookup<
      ffi.NativeFunction<
          ssize_t Function(
              ffi.Pointer<sbc_t>,
              ffi.Pointer<ffi.Void>,
              ffi.Size,
              ffi.Pointer<ffi.Void>,
              ffi.Size,
              ffi.Pointer<ffi.Size>)>>('sbc_decode');
  late final _sbc_decode = _sbc_decodePtr.asFunction<
      int Function(ffi.Pointer<sbc_t>, ffi.Pointer<ffi.Void>, int,
          ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Size>)>();

  /// Encodes ONE input block into ONE output block
  int sbc_encode(
    ffi.Pointer<sbc_t> sbc,
    ffi.Pointer<ffi.Void> input,
    int input_len,
    ffi.Pointer<ffi.Void> output,
    int output_len,
    ffi.Pointer<ssize_t> written,
  ) {
    return _sbc_encode(
      sbc,
      input,
      input_len,
      output,
      output_len,
      written,
    );
  }

  late final _sbc_encodePtr = _lookup<
      ffi.NativeFunction<
          ssize_t Function(
              ffi.Pointer<sbc_t>,
              ffi.Pointer<ffi.Void>,
              ffi.Size,
              ffi.Pointer<ffi.Void>,
              ffi.Size,
              ffi.Pointer<ssize_t>)>>('sbc_encode');
  late final _sbc_encode = _sbc_encodePtr.asFunction<
      int Function(ffi.Pointer<sbc_t>, ffi.Pointer<ffi.Void>, int,
          ffi.Pointer<ffi.Void>, int, ffi.Pointer<ssize_t>)>();
